--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,17 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+TWITCH_OAUTH_BASE_URI="https://id.twitch.tv/oauth2"
+TWITCH_OAUTH_ID=""
+TWITCH_REDIRECT_URI="http://localhost:8000/auth/oauth/twitch"
+TWITCH_OAUTH_SECRET=""
+TWITCH_OAUTH_SCOPES="user:read:email"
+
+
+GITHUB_OAUTH_BASE_URI="https://id.twitch.tv/oauth2"
+GITHUB_OAUTH_ID=""
+GITHUB_REDIRECT_URI="http://localhost:8000/auth/oauth/github"
+GITHUB_OAUTH_SECRET=""
+GITHUB_OAUTH_SCOPES="user:email"
