refatoracao e etc mt cansado pra uma mensagemzinha completa

--- a/.env.example
+++ b/.env.example
@@ -60,7 +60,7 @@ TWITCH_OAUTH_SCOPES="user:read:email"
 
 
 GITHUB_OAUTH_BASE_URI="https://id.twitch.tv/oauth2"
-GITHUB_OAUTH_ID=""
+GITHUB_OAUTH_ID="6b82a4205e7ce901190b"
 GITHUB_REDIRECT_URI="http://localhost:8000/auth/oauth/github"
 GITHUB_OAUTH_SECRET=""
 GITHUB_OAUTH_SCOPES="user:email"
